--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "calculator",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://Bharat346.github.io/Calculator",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.2",
+    "gh-pages": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.1.2"
